# sharp-010verSCP-EEE

./: .gitignore  Makefile  README.md  configure  configure.ac  configure.scan
src/: Makefile  Makefile.am  main.c
src/.deps/: main.Po
